--- a/app/BUILD.gn
+++ b/app/BUILD.gn
@@ -101,6 +101,8 @@ source_set("browser_tests") {
       "//chrome/test",
       "//chrome/test:test_support",
       "//chrome/test:test_support_ui",
+      "//components/aggregation_service",
+      "//components/attribution_reporting",
       "//components/autofill/core/common",
       "//components/commerce/core:feature_list",
       "//components/component_updater",
