--- a/chromium_src/components/privacy_sandbox/BUILD.gn
+++ b/chromium_src/components/privacy_sandbox/BUILD.gn
@@ -1,7 +1,7 @@
-# Copyright 2021 The Brave Authors. All rights reserved.
+# Copyright (c) 2021 The Brave Authors. All rights reserved.
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
-# You can obtain one at http://mozilla.org/MPL/2.0/.
+# You can obtain one at https://mozilla.org/MPL/2.0/.
 
 source_set("unit_tests") {
   testonly = true
@@ -17,6 +17,7 @@ source_set("unit_tests") {
     "//components/privacy_sandbox:privacy_sandbox",
     "//components/privacy_sandbox:privacy_sandbox_prefs",
     "//components/privacy_sandbox:test_support",
+    "//components/privacy_sandbox:tracking_protection_settings",
     "//components/sync_preferences:test_support",
     "//content/public/common",
     "//content/test:test_support",
